jwt shit finally solved. fuck yeah. hats off to ugur